--- a/css/main.css
+++ b/css/main.css
@@ -276,7 +276,7 @@ a.button-clear:active {
 	width:100%;
 	height:50px;
 	text-align:center;
-	background: rgba(255,255,255, 0.75);
+	background: rgba(255,255,255, 0.85);
 	-webkit-box-shadow:0 2px 7px rgba(20,24,35,0.25);
 	-moz-box-shadow:0 2px 7px rgba(20,24,35,0.25);
 	box-shadow:0 2px 7px rgba(20,24,35,0.25);
@@ -305,16 +305,26 @@ a.button-clear:active {
 }
 
 .nav a{
-	color:#888;
+	color:#666;
+	padding: 0 2px 10px 2px;
+}
+
+.nav a:hover {
+	opacity: 0.7;
+	border-bottom: 4px solid #0066ff;
 }
 
 .nav a.active{
 	color:#0066ff;
+	border-bottom: 4px solid #0066ff;
 }
 
-.nav a.button-blue {
-	color:#fff;
-	padding:9px 20px;
+#sign-up {
+	color:#0066ff;
+}
+
+#sign-up:hover {
+	border-bottom: 4px solid #ffcc00;
 }
 
 /* Header */
