--- a/css/main.css
+++ b/css/main.css
@@ -122,6 +122,8 @@ a:visited {
 
 }
 
+@import url(http://fonts.googleapis.com/css?family=Source+Code+Pro:200,300,400,500,600,700,900);
+
 
 /* ==========================================================================
    Author's custom styles
@@ -129,7 +131,7 @@ a:visited {
 
 /* Layout */
 body{
-	font-family:'Junction', Helvetica, Arial, sans-serif;
+	font-family: 'Source Code Pro', sans-serif;
 	padding-top:50px;
 	background:#fafafa;
 }
@@ -168,7 +170,7 @@ p{
 }
 
 h1{
-	font-family: 'Junction', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-family: 'Source Code Pro', sans-serif;
 	font-size:44px;
 	text-align:center;
 }
@@ -181,7 +183,7 @@ h3{
 }
 
 a.button-blue{
-	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-family: 'Source Code Pro', sans-serif;
 	font-weight:bold;
 	color:#fff;
 	padding:12px 23px;
@@ -217,13 +219,13 @@ a.button-blue:active {
 }
 
 a.button-clear {
-	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-family: 'Source Code Pro', sans-serif;
 	color: #fff;
 	font-weight:bold;
 	border-width: 3px;
 	padding: 10px 20px;
-	background: transparent;
-	border: 3px solid rgba(255,255,255,0.3);
+	background: rgba(255,255,255,0.2);
+	border: 3px solid rgba(255,255,255,0.35);
 	-webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.3);
 	-moz-box-shadow: inset 0 0 5px rgba(0,0,0,0.3);
 	box-shadow: inset 0 0 5px rgba(0,0,0,0.3);
@@ -235,7 +237,7 @@ a.button-clear {
 }
 
 a.button-clear:hover {
-	background: rgba(0,0,0,0.35);
+	background: rgba(0,0,0,0.5);
 	border-color: #bbb;
 	-webkit-box-shadow: none;
 	-moz-box-shadow:none;
@@ -271,10 +273,10 @@ a.button-clear:active {
 	display:none;
 	position:fixed;
 	top:0;
-	font-family:'Cabin', Helvetica, Arial, sans-serif;
+	font-family: 'Source Code Pro', sans-serif;
 	font-weight:600;
 	width:100%;
-	height:50px;
+	height:70px;
 	text-align:center;
 	background: rgba(255,255,255, 0.85);
 	-webkit-box-shadow:0 2px 7px rgba(20,24,35,0.25);
@@ -284,7 +286,7 @@ a.button-clear:active {
 }
 
 #navbar .wrapper {
-	width:740px;
+	width:960px;
 	margin:0 auto;
 }
 
@@ -332,6 +334,7 @@ a.button-clear:active {
 	width:100%;
 	overflow:hidden;
 	color:#fff;
+	font-family: 'Source Code Pro', sans-serif;
 }
 
 #background-video{
@@ -388,7 +391,7 @@ a.button-clear:active {
 #content h1{
 	font-size:120px;
 	line-height:44px;
-	font-family:'OstrichSans';
+	font-family: 'Source Code Pro', sans-serif;
 }
 
 #content .row {
