--- a/css/main.css
+++ b/css/main.css
@@ -122,7 +122,11 @@ a:visited {
 
 }
 
+/* SOURCE CODE PRO */
 @import url(http://fonts.googleapis.com/css?family=Source+Code+Pro:200,300,400,500,600,700,900);
+
+/* ROBOTO */
+@import url(http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,900italic,900,700italic,700,500italic,400italic,500);
 
 
 /* ==========================================================================
@@ -308,7 +312,7 @@ a.button-clear:active {
 
 .nav a{
 	color:#666;
-	padding: 0 2px 10px 2px;
+	padding: 0 2px 22px 2px;
 }
 
 .nav a:hover {
@@ -346,7 +350,7 @@ a.button-clear:active {
 
 #head .title{
 	position:absolute;
-	top:150px;
+	top:300px;
 	left:3%;
 	z-index:2;
 	padding:40px;
@@ -389,7 +393,7 @@ a.button-clear:active {
 }
 
 #content h1{
-	font-size:120px;
+	font-size:75px;
 	line-height:44px;
 	font-family: 'Source Code Pro', sans-serif;
 }
@@ -547,7 +551,7 @@ a.button-clear:active {
 	}
 
 	#content h1{
-		font-size:110px;
+		font-size:75;
 	}
 
 	#head #logo a {
