--- a/css/main.css
+++ b/css/main.css
@@ -402,7 +402,7 @@ a.button-clear:active {
 	-webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.1);
 	-moz-box-shadow: 0 1px 1px rgba(0,0,0,0.1);
 	box-shadow: 0 1px 1px rgba(0,0,0,0.1);
-	border-radius: 20px 20px 0 0;
+	border-radius: 20px 0 20px 0;
 	border:1px solid #e6e6e6;
 }
 
