--- a/css/main.css
+++ b/css/main.css
@@ -478,6 +478,11 @@ a.button-clear:active {
 	color:#ffde16;
 }
 
+.box {
+	margin-top:30px;
+	margin-bottom:30px;
+}
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
