--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,42 @@
-/* Layout */
-body{
-	font-family: 'Junction', Helvetica, Arial, sans-serif;
-	padding-top:50px;
-	background:#fafafa;
+
+/* Scratchpad */
+body > * {
+	font-family: "proxima-nova", Helvetica, Arial, sans-serif !important;
+	font-weight: 900  !important;
+	text-transform: uppercase  !important;
+	font-style: italic  !important;
+	font-size: 36px !important;
+	line-height: 1.4em;
 }
 
-#main-content{
-	margin-top: -50px;
+
+section {
+	height: 993px;
+	overflow: hidden;
+	text-align: center;
+	padding: 20%;
+	width: 100%;
+	-moz-box-sizing: border-box; 
+	-webkit-box-sizing: border-box; 
+	box-sizing: border-box;
+
+
+	-moz-box-shadow:    inset 0 0 10px #000000;
+   	-webkit-box-shadow: inset 0 0 10px #000000;
+   	box-shadow:         inset 0 0 10px #000000;
 }
 
-.container{
-	width:100%;
-	background:transparent;
+html, body {
+	width: 100%;
+	height: 100%;
 }
 
-.row{
-	padding-top:40px;
-	width:960px;
-	min-height:600px;
-	margin:0 auto;
-	background:#fff;
-}
+
+
+
+
+
+
 
 /* Text Styles */
 h1,
@@ -34,337 +50,5 @@ h5{
 	-o-font-smoothing: antialiased;
 	font-smoothing: antialiased;
 	text-rendering: optimizelegibility;
-}
-
-p{
-	font-weight:200;
-	font-size:14px;
-	text-align:center;
-	-webkit-font-smoothing: antialiased;
-	-moz-font-smoothing: antialiased;
-	-o-font-smoothing: antialiased;
-	font-smoothing: antialiased;
-	text-rendering: optimizelegibility;
-}
-
-h1{
-	font-family: "din-condensed-web",' Junction', Helvetica, Arial, sans-serif;
-	font-size:34px;
-	text-align:center;
-}
-h2{
-	font-size:24px;
-	text-align:center;
-}
-h3{
-	font-size:20px;
-}
-
-a.button-blue{
-	font-family: 'Source Code Pro', sans-serif;
-	font-weight:bold;
-	color:#fff;
-	padding:12px 23px;
-	background: #5890ff;
-	background: -webkit-gradient(linear, center top, center bottom, from(#5890ff), to(#4a7ad9));
-	background: -webkit-linear-gradient(#5890ff, #4a7ad9);
-	background: -moz-linear-gradient(#5890ff, #4a7ad9);
-	background: -ms-linear-gradient(#5890ff, #4a7ad9);
-	background: -o-linear-gradient(#5890ff, #4a7ad9);
-	border: 1px solid #4177bb;
-	-webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.3);
-	-moz-box-shadow: 0 1px 1px rgba(0,0,0,0.3);
-	box-shadow: 0 1px 1px rgba(0,0,0,0.3);
-	border-radius: 4px;
-	cursor: pointer;
-}
-
-a.button-blue:hover {
-	background: -webkit-gradient(linear, center top, center bottom, from(#6e9ffc), to(#4d7dd6));
-	background: -webkit-linear-gradient(#6e9ffc, #4d7dd6);
-	background: -moz-linear-gradient(#6e9ffc, #4d7dd6);
-	background: -ms-linear-gradient(#6e9ffc, #4d7dd6);
-	background: -o-linear-gradient(#6e9ffc, #4d7dd6);
-	text-decoration: none;
-	color:#fff;
-}
-
-a.button-blue:active {
-	background: -webkit-gradient(linear, center top, center bottom, from(#5387e8), to(#558aed));
-	background: -webkit-linear-gradient(#5387e8, #558aed);
-	background: -moz-linear-gradient(#5387e8, #558aed);
-	background: -ms-linear-gradient(#5387e8, #558aed);
-	background: -o-linear-gradient(#5387e8, #558aed);
-}
-
-a.button-clear {
-	font-family: 'Source Code Pro', sans-serif;
-	color: #fff;
-	font-weight:bold;
-	border-width: 3px;
-	padding: 10px 20px;
-	background: rgba(255,255,255,0.2);
-	border: 3px solid rgba(255,255,255,0.35);
-	-webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.3);
-	-moz-box-shadow: inset 0 0 5px rgba(0,0,0,0.3);
-	box-shadow: inset 0 0 5px rgba(0,0,0,0.3);
-	cursor: pointer;
-	-webkit-border-radius: 4px;
-	-moz-border-radius: 4px;
-	border-radius: 4px;
-	text-shadow: 0 0 4px rgba(0,0,0,0.4);
-}
-
-a.button-clear:hover {
-	background: rgba(0,0,0,0.5);
-	border-color: #bbb;
-	-webkit-box-shadow: none;
-	-moz-box-shadow:none;
-	box-shadow: none;
-	text-decoration: none;
-	color:#fff;
-}
-
-a.button-clear:active {
-	background: rgba(0,0,0,0.6);
-	border-color: #fff;
-	-webkit-box-shadow: none;
-	-moz-box-shadow:none;
-	box-shadow: none
-}
-
-/* Loading Page */
-#loading{
-	position:absolute;
-	top:50px;
-	width:100%;
-}
-
-#loading #logo{
-	width:200px;
-}
-
-#loading #gif{
-	width:50px;
-}
-
-#mute-button {
-	width:30px;
-	height:30px;
-	position:fixed;
-	top:20px;
-	left:5px;
-	background:url('../img/audio-on.png') no-repeat;
-	background-position:center;
-	background-size:cover;
-	z-index:2000;
-	cursor:pointer;
-}
-
-/* Navbar */
-#navbar {
-	display:none;
-	position:relative;
-	top:0;
-	font-family: 'Source Code Pro', sans-serif;
-	font-weight:600;
-	width:100%;
-	height:70px;
-	text-align:center;
-	background: #fff;
-	-webkit-box-shadow:0 2px 7px rgba(20,24,35,0.25);
-	-moz-box-shadow:0 2px 7px rgba(20,24,35,0.25);
-	box-shadow:0 2px 7px rgba(20,24,35,0.25);
-	z-index:100;
-}
-
-#navbar .wrapper {
-	width:800px;
-	margin:0 auto;
-}
-
-#navbar .wrapper a.logo img {
-	float:left;
-	height:50px;
-	margin-top:10px;
-}
-
-.nav {
-	float:right;
-	margin-top:25px;
-}
-
-.nav li{
-	list-style:none;
-	display:inline;
-	padding:0px 10px;
-}
-
-.nav a{
-	padding: 0 2px 22px 2px;
-	text-transform: uppercase;
-}
-
-.nav a:hover {
-	opacity: 0.7;
-	border-bottom: 4px solid #0066ff;
-}
-
-.nav a.active{
-	color:#0066ff;
-	border-bottom: 4px solid #0066ff;
-}
-
-#sign-up {
-	color:#0066ff;
-}
-
-#sign-up:hover {
-	border-bottom: 4px solid #ffcc00;
-}
-
-/* Header */
-#head{
-	width:100%;
-	overflow:hidden;
-	color:#fff;
-	font-family: 'Source Code Pro', sans-serif;
-}
-
-#background-video{
-	position:relative;
-	width:100%;
-	left:0;
-	z-index:0;
-}
-
-#head .title{
-	position:absolute;
-	top:120px;
-	left:3%;
-	z-index:2;
-	width:90%;
-}
-
-#head #logo img{
-	 width:150px;
-	 margin:-40px 0px 40px 100px;
-}
-
-#head .title h1{
-	text-align:right;
-}
-
-#head .title h3{
-	font-weight:400;
-}
-
-#head #facepile {
-	margin-top:20px;
-}
-
-#head #location {
-	display:none;
-	float:right;
-	margin-top:-170px;
-}
-
-#head #location h1{
-	color:#fff;
-	line-height: 0.8;
-	font-size:34px;
-}
-
-#head #info a {
-	font-size:14px;
-}
-
-/* Main Content */
-#content {
-	position: relative;
-	z-index:10;
-}
-
-#content h1{
-	font-weight: 200;
-	font-size:40px;
-	line-height:44px;
-/*	font-family: "freight-sans-pro", 'Junction', Helvetica, Arial, sans-serif; */
-}
-
-#content p{
-	font-family: "din-condensed-web", 'Junction', Helvetica, Arial, sans-serif;
-	line-height: 1.2;
-	font-size:28px;
-	color:#6a7181;
-	-webkit-font-smoothing: antialiased;
-	-moz-font-smoothing: antialiased;
-	-o-font-smoothing: antialiased;
-	font-smoothing: antialiased;
-	text-rendering: optimizelegibility;
-}
-
-#content .row {
-	-webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.1);
-	-moz-box-shadow: 0 1px 1px rgba(0,0,0,0.1);
-	box-shadow: 0 1px 1px rgba(0,0,0,0.1);
-	border:1px solid #e6e6e6;
-}
-
-#content span.mega {
-	margin-left:20px;
-	font-size:44px;
-	color:#0066ff;
-}
-
-#content img.company-logo {
-	width:100%;
-}
-
-#about .left {
-	padding-left:80px;
-	width:45%;
-	float:left;
-}
-
-#about .right {
-	width:37%;
-	float:right;
-	padding-right:80px;
-}
-
-#about .smallphotos {
-	width:100%;
-	margin-top:15px;
-}
-
-#about img {
-	width:100%;
-}
-
-#about p {
-	text-align: left;
-	color:#171717;
-	line-height: 0.8;
-}
-
-/* Footer */
-#footer .container{
-	padding:1px 0;
-	background:#171717;
-	color:#fff;
-}
-
-#footer{
-	text-align:center;
-}
-
-#footer a{
-	color:#ffde16;
-}
-
-.box {
-	margin-top:30px;
-	margin-bottom:30px;
 }
 
