--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
 
 /* Scratchpad */
 body > * {
-	font-family: "proxima-nova", Helvetica, Arial, sans-serif !important;
-	font-weight: 900  !important;
-	text-transform: uppercase  !important;
-	font-style: italic  !important;
-	font-size: 36px !important;
+	font-family: "proxima-nova", Helvetica, Arial, sans-serif;
+	font-weight: 900 ;
+	text-transform: uppercase;
+	font-style: italic ;
+	font-size: 36px;
 	line-height: 1.4em;
 }
 
@@ -32,14 +32,41 @@ html, body {
 	height: 100%;
 }
 
-
-
-
-
 .emphasis {
 	color: #FF5521;
 }
 
+
+
+
+.mhacks-button {
+	width: 280px;
+	border-radius: 5px;
+	background-color: #FF5521;
+	border-top:2px solid #FF6F3B;
+	border-left:2px solid #FF6F3B;
+	border-right:3px solid #CC5930;
+	border-bottom:3px solid #CC5930;
+	text-shadow: 0px -1px 0px #374683;
+	cursor: pointer;
+	color: white;
+	font-size: 30px;
+	margin: 0 auto;
+}
+
+.mhacks-button:active {
+	border-right:2px solid #FF6F3B;
+	border-bottom:2px solid #FF6F3B;
+	border-left:3px solid #CC5930;
+	border-top:3px solid #CC5930;
+}
+
+
+
+
+#big-house {
+	background-image: url('http://www.richincomeways.com/wp-content/uploads/2013/06/tupac.jpg');
+}
 
 
 
@@ -52,51 +79,57 @@ html, body {
 
 
 
-.landing-title {
-	position: absolute;
-	top: 50px;
-	left: 50px;
-	color: white;
-	font-size: 48px;
-	text-shadow: 1px 1px 2px rgba(150, 150, 150, 1);
-}
 
 
-
-
-
-#mute-button {
-	width:30px;
-	height:30px;
-	position:absolute;
-	top:59px;
-	left:5px;
-	background:url('../img/audio-on.png') no-repeat;
-	background-position:center;
-	background-size:cover;
-	z-index:2000;
-	cursor:pointer;
-}
-
-#background-video{
-	position:relative;
-	width:100%;
-	left:0;
-	z-index:0;
-}
-
-
-
-
-
-
-
+/* ------------------ */
 /* Section 1: Landing */
-#landing {
-	background-image:url('http://tednasmith.mymiddleearth.com/files/2012/08/TN-The_Riders_of_Rohan.jpg');
-}
+/* ------------------ */
 
-#big-house {
-	background-image: url('http://www.richincomeways.com/wp-content/uploads/2013/06/tupac.jpg');
-}
+	#landing {
+	}
 
+	.landing-info {
+		width:400px;
+		position: absolute;
+		top: 50px;
+		left: 50px;
+		text-align: center;
+	}
+
+	.landing-title {
+		color: white;
+		font-size: 42px;
+		line-height: 1em;
+		text-shadow: 1px 1px 2px rgba(150, 150, 150, 1);
+	}
+
+	.landing-logo {
+		width: 250px;
+		margin: 40px auto;
+	}
+
+	.landing-info img {
+		width: 100%;
+	}
+
+	#mute-button {
+		width:30px;
+		height:30px;
+		position:absolute;
+		top:59px;
+		left:5px;
+		background:url('../img/audio-on.png') no-repeat;
+		background-position:center;
+		background-size:cover;
+		z-index:2000;
+		cursor:pointer;
+
+		display:none;
+	}
+
+	#background-video{
+		position:relative;
+		width:100%;
+		left:0;
+		z-index:0;
+	}
