--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,10 @@ html, body {
 
 
 
+.background-video-wrapper {
+/*	background-image:url();
+	background-size:cover;
+*/}
 
 
 /* ------------------ */
