--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ body > * {
 	font-style: italic ;
 	font-size: 36px;
 	line-height: 1.4em;
+	text-shadow: 1px 1px 3px rgba(100, 100, 100, 1);
 }
 
 section {
@@ -121,7 +122,7 @@ html, body {
 	}
 
 	.landing-logo {
-		width: 250px;
+		width: 200px;
 		margin: 40px auto;
 	}
 
@@ -151,12 +152,12 @@ html, body {
 /* ---------------- */
 
 	#stats {
-		padding: 75px 0;
-		height: 500px;
+		padding: 50px 0;
+		height: 550px;
 	}
 	
 	#stats > .container > h2 {
-		font-size: 90px;
+		font-size: 80px;
 		text-align: right;
 		text-shadow: 1px 1px 2px rgba(150, 150, 150, 1);
 		margin: 50px 0;
@@ -180,7 +181,8 @@ html, body {
 	
 	#big-house > .container > h3 {
 		text-align: left;
-		margin-top: 35px;
+		margin-top: 50px;
+		font-size: 28px;
 	}
 
 	#big-house > .container > h2 {
@@ -196,7 +198,7 @@ html, body {
 		width: 600px;
 		line-height: 0.8em;
 		margin:0 auto;
-		margin-top: -10px;
+		margin-top: -15px;
 	}
 
 	.big-house-info {
