--- a/css/style.css
+++ b/css/style.css
@@ -74,9 +74,9 @@ html, body {
 }
 
 .big-house-bg {
-	-webkit-transition: -webkit-filter 1s;  
-	background-size:cover;
-	-webkit-filter: grayscale(100%);
+/*	-webkit-transition: -webkit-filter 3s;  
+*/	background-size:cover;
+	-webkit-filter: grayscale(50%);
 	background-image:url(../img/bighouse3.jpg);
 	position:absolute;
 	top:0;
@@ -218,7 +218,6 @@ html, body {
 	#big-house {
 		padding: 50px 0;
 		color: white;
-		background-image: url('../img/bighouse2.jpg');
 	}
 	
 	#big-house > .container > h3 {
