--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,10 @@ html, body {
 .container {
 	width: 960px;
 	margin: 0 auto;
+	-moz-box-sizing: border-box; 
+	-webkit-box-sizing: border-box; 
+	box-sizing: border-box;
+	padding:0 20px;
 }
 
 
@@ -158,8 +162,8 @@ html, body {
 /* ---------------- */
 
 	#stats {
-		padding: 50px 0;
-		height: 550px;
+		padding: 40px 0;
+		height: 530px;
 	}
 	
 	#stats > .container > h2 {
@@ -222,4 +226,40 @@ html, body {
 		margin-top: 40px;
 		text-align: right;
 		text-shadow: 1px 1px 2px rgba(100, 100, 100, 1);
+	}
+
+/* -------------------- */
+/* Section 4: Logistics */
+/* -------------------- */
+
+	#logistics {
+
+	}
+
+	#logistics > .container > h2 {
+		font-size: 60px;
+		text-align: left;
+		margin-top: 90px;
+		margin-bottom: 10px;
+	}
+
+	#logistics > .container > h4 {
+		text-align: left;
+		width: 600px;
+		font-size: 24px;
+		line-height: 0.9em;
+		text-shadow:none;
+		margin-top:-20px;
+	}
+
+
+
+/* ------ */
+/* Footer */
+/* ------ */
+
+	.footer > .container {
+		font-size: 18px;
+		text-align: center;
+		text-shadow: none;
 	}
