--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+/* Design by Shiva Kilaru */
+/* shivakilaru.com */
+
+
 @media (min-width: 481px) {
 	body {
 		min-width: 960px;
@@ -12,7 +16,7 @@ body > * {
 	font-style: italic ;
 	font-size: 36px;
 	line-height: 1.4em;
-	text-shadow: 1px 1px 3px rgba(100, 100, 100, 1);
+	text-shadow: 1px 1px 2px rgba(100, 100, 100, 1);
 }
 
 section {
@@ -37,8 +41,9 @@ html, body {
 	height: 100%;
 }
 
-.emphasis {
+.emphasis, a {
 	color: #FF5521;
+	text-decoration: none;
 }
 
 .mhacks-button {
@@ -223,6 +228,7 @@ html, body {
 		padding: 50px 0;
 		color: white;
 		background-image: url('../img/bighouse2.jpg');
+		background-position: center top;
 	}
 	
 	#big-house > .container > h3 {
@@ -256,6 +262,7 @@ html, body {
 		text-align: right;
 		text-shadow: 1px 1px 2px rgba(100, 100, 100, 1);
 	}
+
 
 /* -------------------- */
 /* Section 4: Logistics */
