--- a/css/responsive.css
+++ b/css/responsive.css
@@ -9,15 +9,14 @@
 
 	.landing-block {
 		position: relative;
-		margin: 20px auto;
+		padding: 20px 0;
 		top: auto;
 		left: auto;
 		width: 100%;
-	}
-
-	.landing-details,
-	.landing-title  {
-		color: black;
+		background-image:url('../img/mobile-bg.jpg');
+		background-size: cover;
+		background-position: center center;
+		background-repeat: no-repeat;
 	}
 
 	.landing-title {
