--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,10 @@
-/* Design by Shiva Kilaru */
-/* shivakilaru.com */
+/*
 
+Designed by Shiva Kilaru - AKA the "fresh prince of CSS"
+AKA the "Steve Jobs of Internet" aka the "Rick James of
+Responsive Web Design"
+
+*/
 
 @media (min-width: 481px) {
 	body {
@@ -41,7 +45,7 @@ html, body {
 	height: 100%;
 }
 
-.emphasis, a {
+.emphasis, a, a:visited {
 	color: #FF5521;
 	text-decoration: none;
 }
@@ -260,7 +264,7 @@ html, body {
 		line-height: 30px;
 		margin-top: 40px;
 		text-align: right;
-		text-shadow: 1px 1px 2px rgba(100, 100, 100, 1);
+		text-shadow: 1px 1px 3px rgba(50, 50, 50, 1);
 	}
 
 
@@ -269,14 +273,19 @@ html, body {
 /* -------------------- */
 
 	#logistics {
-
+		height: auto;
+		padding: 50px 0;
 	}
 
 	#logistics > .container > h2 {
 		font-size: 60px;
 		text-align: left;
-		margin-top: 90px;
-		margin-bottom: 10px;
+		margin-top: 20px;
+		margin-bottom: 60px;
+	}
+
+	#logistics > .container > h4 > i {
+		margin-right: 10px;
 	}
 
 	#logistics > .container > h4 {
@@ -286,6 +295,45 @@ html, body {
 		line-height: 0.9em;
 		text-shadow:none;
 		margin-top:-20px;
+		font-weight: 400;
+		font-style:normal;
+		text-transform: none;
+	}
+
+	#logistics > .container > h3 {
+		text-align: left;
+		font-size: 30px;
+		margin-bottom: 0px;
+		margin-top: 60px;
+	}
+
+	.faq-block {
+		width: 290px;
+		height: 150px;
+		margin: 5px 10px 5px 0;
+		float: left;
+		padding: 5px 10px 5px 0px;
+		overflow: hidden;
+		-moz-box-sizing: border-box; 
+		-webkit-box-sizing: border-box; 
+		box-sizing: border-box;
+		font-weight: 400;
+		font-style:normal;
+		text-transform: none;
+		text-shadow:none;
+		text-align: left;
+	}
+
+	.faq-block > h4 {
+		font-size: 18px;
+		margin: 0;
+		line-height: 20px;
+	}
+
+	.faq-block > p {
+		font-size: 16px;
+		line-height: 1.2em;
+		margin-bottom: 0px;
 	}
 
 
@@ -295,7 +343,7 @@ html, body {
 /* ------ */
 
 	.footer > .container {
-		font-size: 18px;
+		font-size: 14px;
 		text-align: center;
 		text-shadow: none;
 	}
