--- a/css/style.css
+++ b/css/style.css
@@ -162,7 +162,8 @@ html, body {
 
 	#background-video{
 		position:relative;
-		height:720px;
+		min-height:720px;
+		min-width:100%;
 		left:0;
 		z-index:0;
 	}
