--- a/css/responsive.css
+++ b/css/responsive.css
@@ -150,6 +150,7 @@ MHACKS IS FOREVER
 
 	.sponsor {
 		-webkit-filter: grayscale(0%);
+		opacity:1;
 		margin:20px 20px;
 		width:120px;
 		height:60px;
